--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 
 <!DOCTYPE HTML>
-<!--
-	Eventually by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
+	
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Reactiva for iOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -17,29 +14,38 @@
 	</head>
 	<body>
 
+<div id="main">
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1>Reactiva</h1>
+				<h3 id = "subheader" >Every action has a reaction</h3>
+				<p>The  fun app for that shows a user’s reaction.
+				<br>
+				 Be ready  and subscribe to see the most honest reactions, as your friends view your video message
+				.</p>
 			</header>
 
-		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
+
+			<form id="signup-form" action="//SummerStartupSchool.us11.list-manage.com/subscribe/post?u=b95dfbef2fe637d80bf1e5edf&amp;id=2568c8fd7f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+				<input type="email" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email address"  required/>
+				<input type="submit" value="Notify me" name="subscribe" id="mc-embedded-subscribe" class="button"/>
 			</form>
 
 		<!-- Footer -->
-			<footer id="footer">
+
+				
+
+<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="#" class="icon fa-facebook"><span class="label">GitHub</span></a></li>
+					<!-- <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
+
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; reactivapp@gmail.com.</li><li>All rights Reserved</li>
 				</ul>
 			</footer>
 
@@ -47,5 +53,9 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
+
+</div>
 	</body>
+
+
 </html>
