--- a/index.html
+++ b/index.html
@@ -26,31 +26,20 @@
 			</header>
 
 
-			<!-- <form id="signup-form" action="//SummerStartupSchool.us11.list-manage.com/subscribe/post?u=b95dfbef2fe637d80bf1e5edf&amp;id=2568c8fd7f" 
+			<form action="//SummerStartupSchool.us11.list-manage.com/subscribe/post?u=b95dfbef2fe637d80bf1e5edf&amp;id=2568c8fd7f" 
 			method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
 				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email address" required>
 
 				<input type="submit" value="Notify me" name="subscribe" id="mc-embedded-subscribe" class="button"/>
 			</form>
- -->
 
 
 
 
-<div id="mc_embed_signup">
-<form action="//SummerStartupSchool.us11.list-manage.com/subscribe/post?u=b95dfbef2fe637d80bf1e5edf&amp;id=2568c8fd7f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe to our mailing list</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_b95dfbef2fe637d80bf1e5edf_2568c8fd7f" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
 
-<!--End mc_embed_signup-->
+
+
 		<!-- Footer -->
 
 				
