sets final version

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<h1>Reactiva</h1>
 				<h3 id = "subheader" >Every action has a reaction</h3>
-				<p>The  fun app for that shows a user’s reaction.
+				<p>The  fun app for iOS that shows a user’s reaction.
 				<br>
 				 Be ready  and subscribe to see the most honest reactions, as your friends view your video message
 				.</p>
@@ -46,9 +46,10 @@
 
 <footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">GitHub</span></a></li>
+					<li><a href="https://twitter.com/UlAssan" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<!-- 	<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				 -->
+				 	<li><a href="https://www.facebook.com/ulan.asanov.37" class="icon fa-facebook"><span class="label">GitHub</span></a></li>
 					<!-- <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
 
 				</ul>
