add additional info

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 				<p>The  fun app for iOS that shows a user’s reaction.
 				<br>
 				 Be ready  and subscribe to see the most honest reactions, as your friends view your video message
-				.</p>
+				.<br>
+				It is coming soon</p>
 			</header>
 
 
