--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 <footer id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/UlAssan" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<!-- 	<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				 -->
-				 	<li><a href="https://www.facebook.com/ulan.asanov.37" class="icon fa-facebook"><span class="label">GitHub</span></a></li>
+				 	<li><a href="#" class="icon fa-facebook"><span class="label">GitHub</span></a></li>
 					<!-- <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li> -->
 
 				</ul>
