--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<head>
 		<title>Reactiva for iOS</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -25,8 +26,7 @@
 				.<br>
 				It is coming soon</p>
 			</header>
-
-
+<div id="mc_embed_signup">
 			<form action="//SummerStartupSchool.us11.list-manage.com/subscribe/post?u=b95dfbef2fe637d80bf1e5edf&amp;id=2568c8fd7f" 
 			method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
@@ -34,8 +34,7 @@
 
 				<input type="submit" value="Notify me" name="subscribe" id="mc-embedded-subscribe" class="button"/>
 			</form>
-
-
+			</div>
 
 
 
