--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <html>
 	
 	<head>
+	<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript" src="http://s.sharethis.com/loader.js"></script>
+
 		<title>Reactiva for iOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -66,5 +70,12 @@
 </div>
 	</body>
 
+
+
+<script type="text/javascript">stLight.options({publisher: "939a3b02-1cbe-428b-b9c2-9c70bf136502", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+<script>
+var options={ "publisher": "939a3b02-1cbe-428b-b9c2-9c70bf136502", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter", "linkedin", "pinterest", "email"]}};
+var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
+</script>
 
 </html>
