deleting subscribe word

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<h3 id = "subheader" >Every action has a reaction</h3>
 				<p>The  fun app for iOS that shows a user’s reaction.
 				<br>
-				 Be ready  and subscribe to see the most honest reactions, as your friends view your video message
+				 Be ready to see the most honest reactions, as your friends view your video message
 				.<br>
 				It is coming soon</p>
 			</header>
