--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <script type="text/javascript">stLight.options({publisher: "939a3b02-1cbe-428b-b9c2-9c70bf136502", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 <script>
-var options={ "publisher": "939a3b02-1cbe-428b-b9c2-9c70bf136502", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter", "linkedin", "pinterest", "email"]}};
+var options={ "publisher": "939a3b02-1cbe-428b-b9c2-9c70bf136502", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter", "facebook","linkedin", "pinterest", "email"]}};
 var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
 </script>
 
