--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <html>
 	
 	<head>
-	<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript" src="http://s.sharethis.com/loader.js"></script>
-
 		<title>Reactiva for iOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -71,11 +70,10 @@
 	</body>
 
 
-
 <script type="text/javascript">stLight.options({publisher: "939a3b02-1cbe-428b-b9c2-9c70bf136502", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 <script>
-var options={ "publisher": "939a3b02-1cbe-428b-b9c2-9c70bf136502", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter", "vkontakte","linkedin", "pinterest", "email"]}};
-var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
+var options={ "publisher": "939a3b02-1cbe-428b-b9c2-9c70bf136502", "logo": { "visible": true, "url": "http://www.reactiva.tk", "img": "//sd.sharethis.com/disc/images/demo_logo.png", "height": 45}, "ad": { "visible": false, "openDelay": "5", "closeDelay": "0"}, "livestream": { "domain": "", "type": "sharethis", "customColors": { "widgetBackgroundColor": "#FFFFFF", "articleLinkColor": "#006fbb"}}, "ticker": { "visible": false, "domain": "", "title": "", "type": "sharethis", "customColors": { "widgetBackgroundColor": "#9d9d9d", "articleLinkColor": "#00487f"}}, "facebook": { "visible": false, "profile": "sharethis"}, "fblike": { "visible": false, "url": ""}, "twitter": { "visible": false, "user": "sharethis"}, "twfollow": { "visible": false}, "custom": [{ "visible": false, "title": "Custom 1", "url": "", "img": "", "popup": false, "popupCustom": { "width": 300, "height": 250}}, { "visible": false, "title": "Custom 2", "url": "", "img": "", "popup": false, "popupCustom": { "width": 300, "height": 250}}, { "visible": false, "title": "Custom 3", "url": "", "img": "", "popup": false, "popupCustom": { "width": 300, "height": 250}}], "chicklets": { "items": ["facebook", "twitter", "linkedin", "vkontakte"]}, "background": "#000000", "color": "#FFFFFF", "shadow": "gloss", "arrowStyle": "light"};
+var st_bar_widget = new sharethis.widgets.sharebar(options);
 </script>
 
 </html>
