--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	
 	<head>
 <script type="text/javascript">var switchTo5x=true;</script>
+
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript" src="http://s.sharethis.com/loader.js"></script>
 		<title>Reactiva for iOS</title>
@@ -22,7 +23,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Reactiva</h1>
-				<h3 id = "subheader" >Every action has a reaction</h3>
+				<h3 id = "subheader" >Every action has reaction</h3>
 				<p>The  fun app for iOS that shows a user’s reaction.
 				<br>
 				 Be ready to see the most honest reactions, as your friends view your video message
