--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<form action="//SummerStartupSchool.us11.list-manage.com/subscribe/post?u=b95dfbef2fe637d80bf1e5edf&amp;id=2568c8fd7f" 
 			method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
-				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email address" required>
+				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email " required>
 
 				<input type="submit" value="Notify me" name="subscribe" id="mc-embedded-subscribe" class="button"/>
 			</form>
